kustomize/app-books/overlays/prod/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment-canary
spec:
  selector:
    matchLabels:
      app: app-books
      version: canary
  template:
    metadata:
      labels:
        app: app-books
        version: canary
    spec:
      containers:
        - name: book-service-canary
          image: localhost:5000/book-service:canary
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
            limits:
              cpu: "400m"
              memory: "256Mi"
