kustomize/app-books/overlays/prod/deployment-path.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
spec:
  selector:
    matchLabels:
      version: stable
  template:
    metadata:
      labels:
        version: stable
    spec:
      containers:
        - name: book-service
          image: localhost:5000/book-service:latest
          resources:
            requests:
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
